# pollenwall

./: .gitignore  Cargo.toml  LICENCE  LICENSE  Makefile.toml  README.md  com.pollinations.pollenwall.plist  justfile  release.sh  release_mac.sh
.cargo/: config
src/: main.rs  old.rs  tui.rs
