[package]
name = "pollenwall"
version = "0.1.0"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "A cute app which sets your wallpaper according to pollens."
homepage = "https://github.com/pollinations/pollenwall"
repository = "https://github.com/pollinations/pollenwall"
documentation = "https://github.com/pollinations/pollenwall#readme"
keywords = ["pollinations", "pollen", "generative art", "ai", "GAN"]
categories = ["ai", "wallpaper", "art"]

[dependencies]
ipfs-api = "0.14"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
multibase = "0.9.1"
anyhow = "1.0.52"
clap = "2.33.3"
console = "0.15.0"
crossterm = "0.22.1"
dirs = "4.0.0"

