[package]
name = "pollenwall"
version = "0.2.1"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "A cute app which sets your wallpaper according to newly generated pollens. See https://pollinations.ai"
readme = "README.md"
homepage = "https://github.com/pollinations/pollenwall"
repository = "https://github.com/pollinations/pollenwall"
documentation = "https://github.com/pollinations/pollenwall#readme"
keywords = ["pollinations", "pollen", "generative-art", "ai", "wallpaper"]
categories = ["command-line-utilities"]

[dependencies]
ipfs-api = "0.14"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
multibase = "0.9.1"
anyhow = "1.0.52"
clap = "3.0.0"
console = "0.15.0"
crossterm = "0.22.1"
dirs = "4.0.0"
wallpaper = { version = "3", features = ["from_url"] }

[package.metadata.deb]
copyright = "Copyright © 2021, [pollinations-contributors](https://github.com/orgs/pollinations/people)"
license-file = ["LICENSE"]
extended-description = """\
pollenwall subscribes to pollinations.ai ipfs publishing stream\
and listens for processing and done pollens. Depending on the mode\
you've chosen when running the app it will set your wallpaper with pollens."""
